fixed alignment

--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 #header{
-    height: 15vh;
+    height: 5vh;
     display: grid;
     font-size: 750%;
     font-weight: 900;
@@ -60,8 +60,8 @@ body{
 
 #sidebar{
     display: grid;
-    width: 18vw;
-    height: 100vh;
+    width: 20vw;
+    height: 96vh;
     grid-area: sidebar;
     align-items: center;
     justify-content: center;
@@ -78,7 +78,7 @@ body{
 
 #sidebar-icon-div{
     display: grid;
-    height: 15vw;
+    height: 12vw;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     justify-content: center;
@@ -148,7 +148,7 @@ body{
 
 #sidebar-projects-section{
     display: grid;
-    width: 100%;
+    min-width: 80%;
     align-items: center;
     justify-content: center;
     font-size: x-large;
